--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2035,7 +2035,7 @@ Cover
   font-size: 90px;
   font-weight: 900;
   line-height: 1.1;
-  color: #f50136;
+  color: #EC1F28;
   -webkit-transform: translateY(20px);
   transform: translateY(20px);
   -webkit-transition: all 0.4s 600ms ease-in-out;
