--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -124,7 +124,7 @@ ul.nosyely_list {
   width: 30px;
   content: " ";
   position: absolute;
-  border-top: solid 3px #f50136;
+  border-top: solid 3px #EC1F28;
   left: 0;
   top: 0;
 }
@@ -195,7 +195,7 @@ ul.nosyely_list {
   margin-bottom: 7px;
 }
 .icon_list li i {
-  background-color: #f50136;
+  background-color: #EC1F28;
   display: block;
   border-radius: 50px;
   padding: 7px 0;
@@ -329,7 +329,7 @@ img {
 }
 .loader .loader-inner {
   position: absolute;
-  border: 2px solid #f50136;
+  border: 2px solid #EC1F28;
   border-radius: 50%;
   width: 40px;
   height: 40px;
@@ -1660,7 +1660,7 @@ header ul.menu li a.nav-link {
   color: #ffffff;
 }
 header ul.menu li a.nav-link:hover {
-  color: #f50136;
+  color: #EC1F28;
 }
 header ul.menu .search_btn {
   padding: 16px 8px !important;
@@ -1771,7 +1771,7 @@ footer .footer_box h4.footer_title:before {
   width: 30px;
   content: " ";
   position: absolute;
-  border-top: solid 3px #f50136;
+  border-top: solid 3px #EC1F28;
   left: 0;
   top: 0;
 }
@@ -1788,18 +1788,18 @@ footer .footer_social li {
   margin: 5px;
 }
 footer .footer_social li a {
-  border: solid 1px #f50136;
+  border: solid 1px #EC1F28;
   display: block;
   border-radius: 50px;
   padding: 7px 0;
   font-size: 24px;
-  color: #f50136;
+  color: #EC1F28;
   width: 40px;
   height: 40px;
   text-align: center;
 }
 footer .footer_social li a:hover {
-  background-color: #f50136;
+  background-color: #EC1F28;
   color: #ffffff;
 }
 footer ul.instagram_list {
@@ -1910,8 +1910,8 @@ footer .newsletter_form .form-control {
 }
 
 .btn-primary {
-  background-color: #f50136;
-  border: solid 1px #f50136;
+  background-color: #EC1F28;
+  border: solid 1px #EC1F28;
   color: #ffffff;
   -webkit-transition: all 300ms ease-in-out;
   transition: all 300ms ease-in-out;
@@ -1926,13 +1926,13 @@ footer .newsletter_form .form-control {
 
 .btn-primary-outline {
   background-color: transparent;
-  border: solid 1px #f50136;
-  color: #f50136;
+  border: solid 1px #EC1F28;
+  color: #EC1F28;
   -webkit-transition: all 300ms ease-in-out;
   transition: all 300ms ease-in-out;
 }
 .btn-primary-outline:hover {
-  background-color: #f50136;
+  background-color: #EC1F28;
   color: #ffffff;
   -webkit-transition: all 300ms ease-in-out;
   transition: all 300ms ease-in-out;
@@ -2152,7 +2152,7 @@ Cover
   color: #000000;
 }
 .cover_nav .cover_dots li.active {
-  border: solid 2px #f50136;
+  border: solid 2px #EC1F28;
 }
 .cover_nav .cover_dots:before {
   content: " ";
@@ -2268,7 +2268,7 @@ Cover
   padding: 13px;
   font-size: 12px;
   font-weight: 600;
-  color: #f50136;
+  color: #EC1F28;
 }
 
 @media (max-width: 767px) {
@@ -2316,7 +2316,7 @@ Cover
   margin-top: -10px;
   padding: 0 15px;
   font-size: 72px;
-  color: #f50136;
+  color: #EC1F28;
   vertical-align: middle;
   border-radius: 4px;
   display: block;
@@ -2337,7 +2337,7 @@ Cover
   transition: all 0.4s ease-in-out;
 }
 .icon_box_one .content a {
-  color: #f50136;
+  color: #EC1F28;
   font-size: 14px;
   font-weight: 600;
   text-transform: capitalize;
@@ -2351,7 +2351,7 @@ Cover
 .icon_box_one:hover {
   -webkit-box-shadow: 0 10px 32px rgba(0, 0, 0, 0.25);
           box-shadow: 0 10px 32px rgba(0, 0, 0, 0.25);
-  background-color: #f50136;
+  background-color: #EC1F28;
   -webkit-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
 }
@@ -2386,7 +2386,7 @@ Cover
   left: 0;
   font-size: 56px;
   width: 50px;
-  color: #f50136;
+  color: #EC1F28;
   top: 0;
   bottom: auto;
   line-height: 1;
@@ -2431,7 +2431,7 @@ Cover
   transition: all ease-in-out 0.4s;
 }
 .speaker_box .speaker_img .info_box .name {
-  color: #f50136;
+  color: #EC1F28;
   font-size: 16px;
   margin-bottom: 0;
   font-weight: 600;
@@ -2457,19 +2457,19 @@ Cover
   margin-left: 4px;
 }
 .speaker_box .speaker_social ul li a {
-  border: solid 1px #f50136;
+  border: solid 1px #EC1F28;
   display: block;
   border-radius: 50px;
   padding: 7px 0;
   font-size: 24px;
-  color: #f50136;
+  color: #EC1F28;
   width: 40px;
   height: 40px;
   text-align: center;
 }
 .speaker_box .speaker_social ul li a:hover {
   color: #ffffff;
-  background-color: #f50136;
+  background-color: #EC1F28;
 }
 .speaker_box:hover .speaker_img img {
   width: 100%;
@@ -2479,7 +2479,7 @@ Cover
   transition: all ease-in-out 0.4s;
 }
 .speaker_box:hover .speaker_img .info_box {
-  background-color: #f50136;
+  background-color: #EC1F28;
   -webkit-transition: all ease-in-out 0.4s;
   transition: all ease-in-out 0.4s;
 }
@@ -2505,7 +2505,7 @@ Cover
   transition: all ease-in-out 0.4s;
 }
 .price_box .price_highlight {
-  background-color: #f50136;
+  background-color: #EC1F28;
   font-weight: 700;
   text-transform: uppercase;
   font-size: 12px;
@@ -2594,7 +2594,7 @@ Cover
   width: 30px;
   content: " ";
   position: absolute;
-  border-top: solid 4px #f50136;
+  border-top: solid 4px #EC1F28;
   left: 0;
   top: 0;
 }
@@ -2608,7 +2608,7 @@ Cover
   font-weight: 400;
 }
 .event_box .event_info .event_date {
-  color: #f50136;
+  color: #EC1F28;
   font-size: 12px;
   font-weight: 700;
 }
@@ -2620,7 +2620,7 @@ Cover
   line-height: 28px;
   font-size: 12px;
   font-weight: 700;
-  color: #f50136;
+  color: #EC1F28;
 }
 .event_box .readmore_btn:hover {
   color: #18181c;
@@ -2639,7 +2639,7 @@ Cover
   font-size: 48px;
   display: inline-block;
   margin: 0;
-  color: #f50136;
+  color: #EC1F28;
   font-weight: 600;
 }
 .counter_box h5 {
@@ -2659,7 +2659,7 @@ Cover
   min-width: 1000px;
 }
 .table.event_calender thead.event_title {
-  background-color: #f50136;
+  background-color: #EC1F28;
   color: #ffffff;
   border: 0;
 }
@@ -2718,7 +2718,7 @@ Cover
 .table.event_calender tbody td.buy_link a {
   text-transform: capitalize;
   font-weight: 600;
-  color: #f50136;
+  color: #EC1F28;
   text-decoration: underline;
   line-height: 24px;
   -webkit-transition: all ease-in-out 0.4s;
@@ -2734,7 +2734,7 @@ Cover
 9 testimonial
 -------------------------------------------------------- */
 .testimonial_carousel {
-  border: solid 2px #f50136;
+  border: solid 2px #EC1F28;
   padding: 25px;
   position: relative;
   margin: 15px 0;
@@ -2771,7 +2771,7 @@ Cover
   text-transform: capitalize;
 }
 .testimonial_carousel .testimonial_author p span {
-  color: #f50136;
+  color: #EC1F28;
 }
 .testimonial_carousel:before {
   content: "\f347";
@@ -2841,7 +2841,7 @@ Cover
   padding: 25px 0;
 }
 .blog_card .blog_box_data .blog_date {
-  background-color: #f50136;
+  background-color: #EC1F28;
   padding: 15px 30px;
   border-radius: 2px;
   margin-bottom: 15px;
@@ -2858,7 +2858,7 @@ Cover
   color: #838383;
 }
 .blog_card .blog_box_data .blog_meta a:hover {
-  color: #f50136;
+  color: #EC1F28;
 }
 .blog_card .blog_box_data .blog_word {
   word-break: break-all;
@@ -2866,7 +2866,7 @@ Cover
 .blog_card .blog_box_data .readmore_btn {
   font-size: 12px;
   font-weight: 600;
-  color: #f50136;
+  color: #EC1F28;
   text-decoration: underline;
 }
 .blog_card .blog_box_data .readmore_btn:hover {
@@ -2906,12 +2906,12 @@ Cover
   border: solid 2px transparent;
 }
 .nav_menu li a:hover {
-  border: solid 2px #f50136;
+  border: solid 2px #EC1F28;
 }
 .nav_menu li span {
   border-radius: 50px;
   padding: 12px 8px;
-  border: solid 2px #f50136;
+  border: solid 2px #EC1F28;
 }
 
 .widget {
@@ -2951,7 +2951,7 @@ Cover
   font-size: 15px;
 }
 .widget_recent_posts .content a:hover {
-  color: #f50136;
+  color: #EC1F28;
 }
 .widget_recent_posts .content p {
   font-size: 12px;
@@ -2985,7 +2985,7 @@ Cover
   text-transform: capitalize;
 }
 .widget_categories ul li a:hover {
-  color: #f50136;
+  color: #EC1F28;
 }
 
 .widget_instagram {
@@ -3023,7 +3023,7 @@ Cover
 }
 .widget_tags ul li a:hover {
   background-color: #ffffff;
-  border: solid 1px #f50136;
+  border: solid 1px #EC1F28;
   -webkit-transition: all ease-in-out 0.4s;
   transition: all ease-in-out 0.4s;
 }
@@ -3052,18 +3052,18 @@ Cover
   margin: 5px;
 }
 .social_list li a {
-  border: solid 1px #f50136;
+  border: solid 1px #EC1F28;
   display: block;
   border-radius: 50px;
   padding: 7px 0;
   font-size: 24px;
-  color: #f50136;
+  color: #EC1F28;
   width: 40px;
   height: 40px;
   text-align: center;
 }
 .social_list li a:hover {
-  background-color: #f50136;
+  background-color: #EC1F28;
   color: #ffffff;
 }
 
@@ -3087,7 +3087,7 @@ Cover
 }
 .form-control:focus {
   background-color: #ffffff;
-  border-color: #f50136;
+  border-color: #EC1F28;
   -webkit-transition: all ease-in-out 0.4s;
   transition: all ease-in-out 0.4s;
 }
@@ -3121,7 +3121,7 @@ textarea.form-control {
 .single_progressbar .progress {
   margin-bottom: 5px;
   overflow: hidden;
-  background: #f50136;
+  background: #EC1F28;
   /* The Fallback */
   background: rgba(245, 1, 54, 0.2);
   border-radius: 1px;
@@ -3133,11 +3133,11 @@ textarea.form-control {
   font-size: 16px;
   line-height: 16px;
   text-align: center;
-  background-color: #f50136;
+  background-color: #EC1F28;
 }
 
 .accordion_card {
-  border: solid 1px #f50136;
+  border: solid 1px #EC1F28;
   border-radius: 0;
   margin: 15px 0;
 }
@@ -3152,15 +3152,15 @@ textarea.form-control {
 }
 .accordion_card .card-header h5 a {
   background-color: #ffffff;
-  color: #f50136;
+  color: #EC1F28;
   display: block;
   padding: 15px;
-  border-bottom: solid 1px #f50136;
+  border-bottom: solid 1px #EC1F28;
 }
 .accordion_card .card-header h5 a.collapsed {
-  background-color: #f50136;
+  background-color: #EC1F28;
   color: #ffffff;
-  border-bottom: solid 0 #f50136;
+  border-bottom: solid 0 #EC1F28;
 }
 .accordion_card .card-body {
   font-size: 16px;
